--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="search">
           <input type="search" placeholder="Search" />
           <button id="searchPage">
-            <i class="fa fa-regular fa-magnifying-glass"></i>
+            <i class="fa fa-solid fa-magnifying-glass"></i>
           </button>
         </div>
         <div class="notificationsCont">
@@ -46,7 +46,7 @@
       <nav>
         <!-- If this were a full website then the hrefs would point to the respective pages -->
         <a href="#" class="navLink"
-          ><i class="fa fa-solid fa-magnifying-glass"></i>
+          ><i class="fa fa-solid fa-house-user"></i>
           <span class="navPage">Home</span></a
         >
         <a href="#" class="navLink"
@@ -54,7 +54,7 @@
           <span>Appointments</span></a
         >
         <a href="#" class="navLink"
-          ><i class="fa fa-regular fa-message-dots"></i>
+          ><i class="fa fa-solid fa-comment-dots"></i>
           <span class="navPage">Messages</span></a
         >
         <a href="#" class="navLink"
@@ -70,8 +70,8 @@
           <span class="navPage">Setting</span></a
         >
         <a href="#" class="navLink"
-          ><i class="fa fa-regular fa-arrow-right-from-bracket"></i
-          ><span class="navPage">Logout</span></a
+          ><i class="fa fa-solid fa-right-from-bracket"></i>
+          <span class="navPage">Logout</span></a
         >
       </nav>
       <section id="billing-info">
@@ -81,8 +81,10 @@
             <option value="invoices">Invoices</option>
           </select>
           <div>
-            <button><i class="fa fa-solid fa-magnifying-glass"></i></button>
-            <button><i class="fa fa-regular fa-bars-filter"></i></button>
+            <button>
+              <i class="fa fa-solid fa-magnifying-glass"></i>
+            </button>
+            <button><i class="fa fa-solid fa-filter"></i></button>
           </div>
         </div>
         <table>
@@ -105,7 +107,7 @@
             <td scope="col">
               <a href="">View</a
               ><button>
-                <i class="fa fa-regular fa-arrow-down-to-bracket"></i></button
+                <i class="fa fa-solid fa-download"></i></button
               ><button><i class="fa fa-regular fa-print"></i></button>
             </td>
           </tr>
@@ -128,7 +130,7 @@
             <td scope="col">
               <a href="">View</a
               ><button>
-                <i class="fa fa-regular fa-arrow-down-to-bracket"></i></button
+                <i class="fa fa-solid fa-download"></i></button
               ><button><i class="fa fa-regular fa-print"></i></button>
             </td>
           </tr>
@@ -151,7 +153,7 @@
             <td scope="col">
               <a href="">View</a
               ><button>
-                <i class="fa fa-regular fa-arrow-down-to-bracket"></i></button
+                <i class="fa fa-solid fa-download"></i></button
               ><button><i class="fa fa-regular fa-print"></i></button>
             </td>
           </tr>
@@ -161,7 +163,7 @@
         <div class="change-page-cont">
           <p class="current-page">Page 1</p>
           <button id="firstPage">
-            <i class="fa fa-regular fa-angles-left"></i>
+            <i class="fa fa-solid fa-angles-left"></i>
           </button>
           <button id="prevPage">
             <i class="fa fa-regular fa-angle-left"></i>
@@ -170,7 +172,7 @@
             <i class="fa fa-regular fa-angle-right"></i>
           </button>
           <button id="lastPage">
-            <i class="fa fa-regular fa-angles-right"></i>
+            <i class="fa fa-solid fa-angles-right"></i>
           </button>
           <p class="last-page">Page 4</p>
         </div>
